fix: fix word overflow for coin message

--- a/src/assets/css/surecoin.css
+++ b/src/assets/css/surecoin.css
@@ -258,14 +258,15 @@
     font-size: 10px;
     line-height: 1.7;
 }
-
 .director-message {
-    position: absolute;
-    bottom: 18%;
-    transform: translate(-50%, 60%);
-    font-size: 20px;
+    bottom: 15%;
+    font-size: 18px;
     left: 50%;
+    position: absolute;
     text-transform: uppercase;
+    transform: translate(-50%,60%);
+    width: 100%;
+    text-align: center;
 }
 .no-picked-disabled {
     background: #cccccc !important;
